add javadoc to repo docs